file for details.

ELinks 0.12pre5.GIT now:
------------------------

To be released as 0.12pre6 or 0.12rc1.

* major bug 764: Correctly initialize options on big-endian 64-bit
  systems.
* bug 983: Give preference to the Content-Type specified in the HTTP
  header over that specified via the HTML meta tag.
* bug 1084: Allow option names containing '+' and '*' in the option
  manager.

Bugs that should be removed from NEWS before the 0.12.0 release:

* critical bug 943: Don't let user JavaScripts call any methods of
  ``elinks.action'' in tabs that do not have the focus.  If a tab was
  closed with ``elinks.action.tab_close'' while it had pop-up windows,
  ELinks could crash; as a precaution, don't allow other actions
  either.  ELinks 0.12pre1 was the first release that supported
  ``elinks.action''.
* critical bug 1083: Avoid an infinite loop when trying to decompress
  malformed data.  Caused by the bug 1068 fix in ELinks 0.12pre3.
* bug 1112: Map most numeric character references &#x80; ... &#x9F;
  to graphical characters also when the output charset is UTF-8.
  ELinks 0.12pre1 was the first release that supported UTF-8 as the
  terminal charset, and ELinks 0.12pre5 was the first release that
  supported UTF-8 as the dump charset.

ELinks 0.12pre5:
----------------

Released on 2009-07-08.

* Debian bug 534835: Check the return values of some SpiderMonkey
  functions, to avoid crashes if out of memory.
* minor bug 1017: To work around HTTP server bugs, disable
  protocol.http.compression by default, until ELinks can report
  decompression errors or automatically retry the connection.
* enhancement: The French translation was updated.

Bugs that should be removed from NEWS before the 0.12.0 release:

* critical bug 1081: To fix crashes caused by different definitions of
  regfree() in TRE and in the system libc, link with TRE before any
  other libraries.  ELinks 0.12pre4 was the first release that had
  this bug.